--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,9 @@ build-backend = "hatchling.build"
 
 [project]
 name = "tiktokautouploader"
-version = "2.8"
-description = "Upload or schedule videos to TikTok with TikTok sounds and hashtags that work."
-long-description = "file: README.md"
-long-description-content-type = "text/markdown"
+version = "2.91"
+description = "Upload or schedule videos to TikTok with viral TikTok sounds and hashtags."
+readme = {file = "README.md", content-type = "text/markdown"}
 keywords = ["tiktok", "autoupload", "tiktokautoupload"]
 authors = [
     { name = "HAZIQ", email = "haziqmk123@gmail.com" }
@@ -29,6 +28,7 @@ dependencies = [
     "requests>=2.0.0",
     "Pillow>=8.0.0",
     "scikit-learn>=0.24.0",
+    "inference>=0.18.1",
 ]
 
 [tool.hatch.build]
@@ -36,10 +36,9 @@ tags = ["wheel"]
 
 [tool.hatch.metadata]
 name = "tiktokautouploader"
-version = "2.8"
+version = "2.91"
 description = "Upload or schedule videos to TikTok with TikTok sounds and hashtags that work."
-long_description = "file: README.md"
-long_description_content_type = "text/markdown"
+readme = {file = "README.md", content-type = "text/markdown"}
 keywords = ["tiktok", "autoupload", "tiktokautoupload"]
 authors = [
     { name = "HAZIQ", email = "haziqmk123@gmail.com" }
